--- a/.github/workflows/deploy-to-gke.yaml
+++ b/.github/workflows/deploy-to-gke.yaml
@@ -60,4 +60,4 @@ jobs:
     - name: Deploy to GKE
       run: |
         gcloud container clusters get-credentials fastapi-cluster --zone us-west1-a
-        kubectl apply -f k8s-deployment.yaml
+        kubectl apply -f k8/k8s-deployment.yaml
