--- a/K8s/k8s-deployment.yaml
+++ b/K8s/k8s-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: fastapi
-        image: us-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fastapi-repo/fastapi-app:latest
+        image: us-west1-docker.pkg.dev/active-valve-479215-b4/fastapi-repo/fastapi-app:latest
         ports:
         - containerPort: 8001
 ---
